# supre_robot_sdk

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  gravity_compensation.py  gravity_compensation_config.yaml  run_zero_all_joints.sh  zero_all_joints.py  zero_all_joints_config.yaml
docs/: 2025-02-24-webxr-leader-control-design.md  2025-02-24-webxr-leader-control-implementation.md  2026-03-23-supre-robot-sdk-design.md  2026-03-23-supre-robot-sdk-implementation.md  gravity_compensation_safety.md
examples/: robot_config.yaml  robot_config_repeat.yaml
src/supre_robot_sdk/: __init__.py  exceptions.py
src/supre_robot_sdk/core/: __init__.py  config.py  hardware_manager.py  interfaces.py  robot.py
src/supre_robot_sdk/hardware/: __init__.py  base.py
src/supre_robot_sdk/hardware/eyou/: __init__.py  motor.py
src/supre_robot_sdk/hardware/interpolation/: __init__.py  async_interpolator.py
src/supre_robot_sdk/hardware/jodell/: __init__.py  gripper.py
tests/: test_async_interpolator.py  test_config.py  test_eyou_motor.py  test_gravity_compensation_app.py  test_hardware_manager.py  test_interfaces.py  test_jodell_gripper.py  test_no_lerobot_dependency.py  test_robot.py  test_zero_all_joints_app.py
